# fp-checkers

./: .stylish-haskell.yaml  LICENSE  README.md  stack.yaml
main/: README.md  client.cfg  main.cabal
main/app/: Main.hs  MainServer.hs  Tmp.txt
main/resources/: b_king.rgba  b_man.rgba  board_windows.rgba  dot.rgba  ghost.rgba  w_king.rgba  w_man.rgba
main/src/: Board.hs  Engine.hs  MyGraphics.hs  MyTH.hs  Resources.hs  Server.hs  Util.hs
main/test/: SerializableTests.hs  Spec.hs
